<resources>
    <string name="app_name">Lab8</string>

    <string name="add">增加条目</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="gift">礼物</string>

    <string name="save">保存修改</string>
    <string name="cancel">放弃修改</string>

    <string name="detail">详细信息</string>

    <string name="r1t">姓名：</string>
    <string name="r2t">生日：</string>
    <string name="r3t">礼物：</string>
    <string name="r4t">电话：</string>

    <string name="duplicated_name">用户名重复啦，请检查</string>
    <string name="empty_input">输入不能为空</string>

    <string name="no_phone_number">无</string>
</resources>
