<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TableRow
            android:padding="10dp">
            <TextView
                android:id="@+id/add_row1_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r1t"/>
            <EditText
                android:id="@+id/add_row1_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:hint=""
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>
        <TableRow
            android:padding="10dp">
            <TextView
                android:id="@+id/add_row2_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r2t"/>
            <EditText
                android:id="@+id/add_row2_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:hint=""/>
        </TableRow>
        <TableRow
            android:padding="10dp">
            <TextView
                android:id="@+id/add_row3_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r3t"/>
            <EditText
                android:id="@+id/add_row3_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:hint=""/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/add_layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="16sp"
        android:text="@string/add"/>

</LinearLayout>