<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="15dp"
        android:text="@string/detail"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <TextView
                android:id="@+id/row1_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r1t"/>
            <EditText
                android:id="@+id/row1_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:enabled="false"
                android:hint=""
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>
        <TableRow
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <TextView
                android:id="@+id/row2_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r2t"/>
            <EditText
                android:id="@+id/row2_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:hint=""/>
        </TableRow>
        <TableRow
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <TextView
                android:id="@+id/row3_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r3t"/>
            <EditText
                android:id="@+id/row3_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:hint=""/>
        </TableRow>
        <TableRow
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <TextView
                android:id="@+id/row4_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/r4t"/>
            <EditText
                android:id="@+id/row4_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:enabled="false"
                android:textColor="@color/colorPrimaryDark"
                android:hint=""/>
        </TableRow>
    </TableLayout>

</LinearLayout>